add competition mode, fix iPad screen size, add share button

--- a/ColorMatch/bg.lproj/Localizable.strings
+++ b/ColorMatch/bg.lproj/Localizable.strings
@@ -15,6 +15,14 @@
 "game_title" = "Цветово Съвпадение";
 "match" = "Успех!";
 "close" = "Затвори";
+"new_game" = "Нова Игра";
+"share_result" = "Сподели Резултат";
+"share_prompt" = "Искаш ли да споделиш с приятели?";
+"share_prompt_normal" = "Сподели тази игра с приятели!";
+"share_text" = "Намерих цвета за %@ на %@ ниво в Color Lab 255! Можеш ли да ме победиш?";
+"share_text_normal" = "Разгледай Color Lab 255! Научи RGB цветовете като ги съчетаваш визуално. Забавно и образователно!";
+"time_elapsed" = "Време";
+"your_level" = "Ниво";
 "red" = "Червено";
 "green" = "Зелено";
 "blue" = "Синьо";
@@ -27,6 +35,8 @@
 "display_options" = "Опции за Показване";
 "show_color_values" = "Показвай Цветови Стойности";
 "color_values_description" = "Покажи/скрий шестнадесетичните цветови кодове по време на играта";
+"competition_mode" = "Състезателен Режим";
+"competition_mode_description" = "Състезавай се с времето! Таймерът стартира при началото и цветовите стойности са скрити за допълнително предизвикателство";
 "target_shape" = "Целева Форма";
 "shape_selection_description" = "Избери форма за целевия цвят";
 "support" = "Поддръжка";
